--- a/app/src/main/res/menu/menu_gallery_image.xml
+++ b/app/src/main/res/menu/menu_gallery_image.xml
@@ -3,8 +3,9 @@
   xmlns:tools="http://schemas.android.com/tools"
   tools:context="com.example.galleriquii.activity.MainActivity">
   <item
-    android:id="@+id/action_settings"
+    android:id="@+id/action_info"
     android:orderInCategory="100"
-    android:title="@string/action_settings"
-    app:showAsAction="never" />
+    android:title="Info"
+    android:icon="@drawable/ic_baseline_info_24"
+    app:showAsAction="ifRoom|never" />
 </menu>
