--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,19 +1,23 @@
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-  <PreferenceCategory app:title="Image info">
-    <EditTextPreference
-        app:key="name"
-        app:title="Name" />
-    <EditTextPreference
-      app:key="author"
-      app:title="Author" />
-    <EditTextPreference
-      app:key="title"
-      app:title="Title"
-       />
-    <EditTextPreference
-      app:key="creationDate"
-      app:title="Creation date" />
-  </PreferenceCategory>
+    <PreferenceCategory app:title="Image info">
+        <EditTextPreference
+            android:selectable="false"
+            app:key="name"
+            app:title="Name" />
+        <EditTextPreference
+            android:selectable="false"
+            app:key="author"
+            app:title="Author" />
+        <EditTextPreference
+            android:selectable="false"
+            app:key="title"
+            app:title="Title" />
+        <EditTextPreference
+            android:selectable="false"
+            app:key="creationDate"
+            app:title="Creation date" />
+    </PreferenceCategory>
 
 </PreferenceScreen>
