--- a/app/src/main/res/layout/fragment_gallery_image.xml
+++ b/app/src/main/res/layout/fragment_gallery_image.xml
@@ -1,6 +1,4 @@
-<com.example.galleriquii.utils.TouchImageView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<com.example.galleriquii.utils.TouchImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/detail_image"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
