--- a/app/src/main/res/layout/gallery_image_item.xml
+++ b/app/src/main/res/layout/gallery_image_item.xml
@@ -4,13 +4,14 @@
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
     android:padding="8dp">
+
     <ImageView
         android:id="@+id/item_img"
         android:layout_width="match_parent"
         android:layout_height="128dp"
         android:layout_margin="1dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:adjustViewBounds="true"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
